# rust-standard-template

./: Cargo.toml  LICENSE  README.md  git_hooks_setup.ps1
DDL Scripts/: db_users.sql  indexes.sql
ddl_scripts/: table_ddl.sql
git-hooks/: README.md  git_hooks_setup.ps1  pre-commit
src/: controller.rs  error.rs  main.rs  middleware.rs  model.rs  routes.rs
src/controller/: handler.rs  handler_concurrent.rs  login.rs
src/model/: auth_models.rs  login.rs
